Fix Nullable and Warnings for some Modifiers